Fixed Nav Bar clipping issue

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ a:hover {
 	}
 	.topnav.responsive a {
 			float: none;
+			margin-bottom: 0;
 			display: block;
 			text-align: left;
 	}
